@@ -110,8 +110,10 @@ static struct ibv_context_ops mthca_ctx_ops = {
 	.destroy_cq    = mthca_destroy_cq,
 	.create_srq    = mthca_create_srq,
 	.modify_srq    = mthca_modify_srq,
+	.query_srq     = mthca_query_srq,
 	.destroy_srq   = mthca_destroy_srq,
 	.create_qp     = mthca_create_qp,
+	.query_qp      = mthca_query_qp,
 	.modify_qp     = mthca_modify_qp,
 	.destroy_qp    = mthca_destroy_qp,
 	.create_ah     = mthca_create_ah,
