@@ -1,3 +1,8 @@
+2006-02-13  Dotan Barak  <dotanb@mellanox.co.il>
+
+	* src/verbs.c (mthca_query_qp, mthca_query_srq): Add query QP and
+	query SRQ verbs.
+
 2006-01-31  Roland Dreier  <rdreier@cisco.com>
 
 	* src/mthca.h: Remove useless "extern" from function declarations.
